[HTML - 1.2] - Header changed

--- a/Topic-0/HTML-Basics/ex-1.1.html
+++ b/Topic-0/HTML-Basics/ex-1.1.html
@@ -2,7 +2,7 @@
 <head>
     <title>Exercise 1.1 - HTML-Basics</title>
 </head>
-<body>
-  <h1>Hello World!</h1>
-</body>
+ <body>
+    <h1>My todo list!</h1>
+ </body>
 </html>
