[HTML - 1.3] - Added HTML semantic to list

--- a/Topic-0/HTML-Basics/to-do-list.html
+++ b/Topic-0/HTML-Basics/to-do-list.html
@@ -2,13 +2,20 @@
 <head>
     <title>To do list</title>
 </head>
- <body>
-    <h1>My todo list!</h1>
+<body>
+  <header>
+      <h1>My todo list!</h1>
+  </header>
+  
+    <!--I took an unordered list because i think that the order of the following items
+    are not important-->
+  <section>
     <ul class="todo-items-list">
         <li>Do globant bootcamp!</li>
         <li>Do BBDD Exercises</li>
         <li>Study for BBDD Lab</li>
-        <li>Sleep</li>
+        <li>Buy food</li>
     </ul>
- </body>
+  </section>
+</body>
 </html>
