[HTML - Semantic] Added semantic to sign-up-form

--- a/Topic-0/HTML-Basics/sign-up-form.html
+++ b/Topic-0/HTML-Basics/sign-up-form.html
@@ -5,6 +5,7 @@
 </head>
   <body>
     <div class="main-container">
+      <section>
         <form id="user-bio-form" action="">
             <p>Fields with * are mandatory</p>
             <fieldset>
@@ -69,6 +70,7 @@
                   </li>
                 </ul>
         </form>
+      </section>
     </div>  
   </body>
 </html>
