[HTML - 2.3] - Added metatags to each html file

--- a/Topic-0/HTML-Basics/sign-up-form.html
+++ b/Topic-0/HTML-Basics/sign-up-form.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>sign-up-form</title>
     <link rel="stylesheet" href="./style/form.css">
 </head>
