--- a/Topic-0/HTML-Basics/expenses.html
+++ b/Topic-0/HTML-Basics/expenses.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Expenses table</title>
       <link rel="stylesheet" href="./style/expenses.css">
   </head>
