--- a/Topic-0/HTML-Basics/multimedia-files.html
+++ b/Topic-0/HTML-Basics/multimedia-files.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Multimedia Files</title>
 </head>
 <body>
