--- a/Topic-0/HTML-Basics/sign-up-form.html
+++ b/Topic-0/HTML-Basics/sign-up-form.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5 user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>sign-up-form</title>
     <link rel="stylesheet" href="./style/form.css">
