--- a/Topic-0/HTML-Basics/to-do-list.html
+++ b/Topic-0/HTML-Basics/to-do-list.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5 user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To do list</title>
 </head>
