[HTML - 2.5] - Validated Markups

--- a/Topic-0/HTML-Basics/multimedia-files.html
+++ b/Topic-0/HTML-Basics/multimedia-files.html
@@ -12,9 +12,9 @@
             alt="Globant Logo" title="Globant Logo">
 
           <video width="640" height="480" controls>
-              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557447069/globant_ltxqhc.ogv" type="video/ogg; codecs=theora,vorbis">
-              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448191/globant_a1mr7n.mp4" type="video/mp4; codecs=avc1.42E01E,mp4a.40.2">
-              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448578/globant_mpzq2g.webm" type="video/webm; codecs=vp8,vorbis">
+              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557447069/globant_ltxqhc.ogv" type="video/ogg">
+              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448191/globant_a1mr7n.mp4" type="video/mp4">
+              <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448578/globant_mpzq2g.webm" type="video/webm">
           </video>
 
           <p>Breaking bad Ringtone!</p>
