--- a/Topic-0/HTML-Basics/sign-up-form.html
+++ b/Topic-0/HTML-Basics/sign-up-form.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=0.5 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=0.5">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>sign-up-form</title>
     <link rel="stylesheet" href="./style/form.css">
 </head>
   <body>
     <div class="main-container">
-      <section>
-        <form id="user-bio-form" action="">
+        <form id="user-bio-form" action="#">
             <p>Fields with * are mandatory</p>
             <fieldset>
               <legend>Personal info</legend>
@@ -21,7 +20,7 @@
                   </li>
                   <li>
                     <label for="last-name">Last Name*</label>
-                    <input type="text" name="last-name" id="last-name"required>
+                    <input type="text" name="last-name" id="last-name" required>
                   </li>
                   <li>
                     <label for="birthday">Birthday*</label>
@@ -74,7 +73,6 @@
                   </li>
                 </ul>
         </form>
-      </section>
     </div>  
   </body>
 </html>
