--- a/Topic-0/HTML-Basics/expenses.html
+++ b/Topic-0/HTML-Basics/expenses.html
@@ -2,40 +2,42 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
       <title>Expenses table</title>
       <link rel="stylesheet" href="./style/expenses.css">
   </head>
   <body>
     <section>
-        <table summary="A summary of last month expenses">
-            <caption>Month Expenses</caption>
-            <thead>
-                <tr>
-                    <th scope="col">Category</th>
-                    <th scope="col">Total</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td scope="row">Rental</td>
-                    <td>$2800</td>
-                </tr>
-                <tr>
-                    <td scope="row">Food</td>
-                    <td>$4000</td>
-                </tr>
-                <tr>
-                    <td scope="row">Fun</td>
-                    <td>$400</td>
-                </tr>
-                <tr>
-                    <td scope="row">Cleaning Articles</td>
-                    <td>$1500</td>
-                </tr>
-            </tbody>
-        </table>
+      <figure>
+          <table>
+              <thead>
+                  <tr>
+                      <th scope="col">Category</th>
+                      <th scope="col">Total</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <th scope="row">Rental</th>
+                      <td>$2800</td>
+                  </tr>
+                  <tr>
+                      <th scope="row">Food</th>
+                      <td>$4000</td>
+                  </tr>
+                  <tr>
+                      <th scope="row">Fun</th>
+                      <td>$400</td>
+                  </tr>
+                  <tr>
+                      <th scope="row">Cleaning Articles</th>
+                      <td>$1500</td>
+                  </tr>
+              </tbody>
+          </table>
+          <figcaption>A summary of monthly expenses</figcaption>
+        </figure>
     </section>  
   </body>
 </html>
