--- a/Topic-0/HTML-Basics/to-do-list.html
+++ b/Topic-0/HTML-Basics/to-do-list.html
@@ -2,24 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.5 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.5">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>To do list</title>
 </head>
-<body>
-  <header>
-      <h1>My todo list!</h1>
-  </header>
-  
-    <!--I took an unordered list because i think that the order of the following items
-    are not important-->
-  <section>
-    <ul class="todo-items-list">
-        <li>Do globant bootcamp!</li>
-        <li>Do BBDD Exercises</li>
-        <li>Study for BBDD Lab</li>
-        <li>Buy food</li>
-    </ul>
-  </section>
-</body>
+  <body>
+     <!--I took an unordered list because i think that the order of the following items
+      are not important-->
+    <section>
+      <header>
+          <h1>My todo list!</h1>
+      </header>
+        <ul class="todo-items-list">
+            <li>Do globant bootcamp!</li>
+            <li>Do BBDD Exercises</li>
+            <li>Study for BBDD Lab</li>
+            <li>Buy food</li>
+        </ul>
+    </section>
+  </body>
 </html>
