[HTML] - Semantic corrections

--- a/Topic-0/HTML-Basics/expenses.html
+++ b/Topic-0/HTML-Basics/expenses.html
@@ -11,6 +11,7 @@
     <section>
       <figure>
           <table>
+              <caption>A summary of monthly expenses</caption>
               <thead>
                   <tr>
                       <th scope="col">Category</th>
@@ -36,7 +37,6 @@
                   </tr>
               </tbody>
           </table>
-          <figcaption>A summary of monthly expenses</figcaption>
         </figure>
     </section>  
   </body>
