--- a/Topic-0/HTML-Basics/multimedia-files.html
+++ b/Topic-0/HTML-Basics/multimedia-files.html
@@ -8,20 +8,23 @@
 </head>
 <body>
     <figure>
+        <figcaption>Globant: We are ready!</figcaption>
           <img src="https://media-assets-04.thedrum.com/cache/images/thedrum-prod/s3-news-tmp-56002-globant--2x1--940.jpg"
             alt="Globant Logo" title="Globant Logo">
-
+    </figure>
+    <figure>
+          <figcaption>This is globant!</figcaption>
           <video width="640" height="480" controls>
               <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557447069/globant_ltxqhc.ogv" type="video/ogg">
               <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448191/globant_a1mr7n.mp4" type="video/mp4">
               <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557448578/globant_mpzq2g.webm" type="video/webm">
           </video>
-
-          <p>Breaking bad Ringtone!</p>
+    </figure>
+    <figure>
+          <figcaption>Breaking bad ringtone!</figcaption>
           <audio controls>
               <source src="https://res.cloudinary.com/dpk7rcmkv/video/upload/v1557461944/Breaking-Bad_jesses_ringtone_vbozkl.mp3" type="audio/mpeg">
-            </audio>
-        <figcaption>Some Multimedia files!</figcaption>
+          </audio>
     </figure>
 </body>
 </html>
