--- a/Topic-0/CSS-Basics/index.html
+++ b/Topic-0/CSS-Basics/index.html
@@ -23,7 +23,18 @@
         <![endif]-->
         
         <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+    <section class="container">
+        <header>header</header>
+        <nav>nav</nav>
+        <section>
+             section
+            <header>section > header</header>
+            <article>section > article</article>
+            <footer>section > footer</footer>
+        </section>
+        <aside>aside</aside>
+        <footer>footer</footer>
+    </section>
         <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
