--- a/Topic-0/CSS-Basics/index.html
+++ b/Topic-0/CSS-Basics/index.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>CSS - Flex Layout</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
     
     <link rel="stylesheet" href="css/normalize.css">
@@ -27,8 +28,8 @@
         <header>header</header>
         <nav>nav</nav>
         <section>
-             section
-            <header>section > header</header>
+            section<br>
+            <header>header</header>
             <article>section > article</article>
             <footer>section > footer</footer>
         </section>
