--- a/Topic-0/CSS-Basics/index.html
+++ b/Topic-0/CSS-Basics/index.html
@@ -25,16 +25,16 @@
         
         <!-- Add your site or application content here -->
     <section class="container">
-        <header>header</header>
-        <nav>nav</nav>
-        <section>
+        <header class="header">header</header>
+        <nav class="navigation">nav</nav>
+        <section class="content">
             section<br>
-            <header>header</header>
-            <article>section > article</article>
-            <footer>section > footer</footer>
+            <header class="content-header">header</header>
+            <article class="content-article">section > article</article>
+            <footer class="content-footer">section > footer</footer>
         </section>
-        <aside>aside</aside>
-        <footer>footer</footer>
+        <aside class="sidebar">aside</aside>
+        <footer class="footer">footer</footer>
     </section>
         <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js" integrity="{{JQUERY_SRI_HASH}}" crossorigin="anonymous"></script>
