[CSS - 3.3] - Added Typography rules

--- a/Topic-0/CSS-Basics/index.html
+++ b/Topic-0/CSS-Basics/index.html
@@ -29,7 +29,7 @@
         <nav class="navigation">nav</nav>
         <section class="content">
             section<br>
-            <header class="content-header">header</header>
+            <header class="content-header">section > header</header>
             <article class="content-article">section > article</article>
             <footer class="content-footer">section > footer</footer>
         </section>
