Module_1 - 1.3 - Added hidden section

--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <section class="container">
+        <section class="section hidden">
+            <h1>Hello World!</h1>
+        </section>
+
         <header>
             <h1>Some movie trailers</h1>
         </header>
