--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <script src="./js/script.js" async></script>
+    <title>Movie trailers</title>
 </head>
 <body>
     <section class="container">
