Module_1 - 2.* - Added button that show an alert message

--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -11,10 +11,11 @@
 </head>
 <body>
     <section class="container">
+
         <section class="section hidden">
             <h1>Hello World!</h1>
         </section>
-
+        <button type="button" class="button alert">Show message!</button>
         <header>
             <h1>Some movie trailers</h1>
         </header>
@@ -33,6 +34,7 @@
             </figure>
             <figcaption>IT CHAPTER TWO only in theaters September 6, 2019</figcaption>
         </article>
+
     </section>
 </body>
 </html>
