Module_1 - 3.2 - Fetch function attached to button click

--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -15,7 +15,7 @@
         <section class="section hidden">
             <h1>Hello World!</h1>
         </section>
-        <button type="button" class="button alert">Show message!</button>
+        <button type="button" class="button alert">Get a joke!</button>
         <header>
             <h1>Some movie trailers</h1>
         </header>
