Module_1 - 4.3 - Added input to search repos

--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -39,9 +39,21 @@
 
         </section>
         <section class="git-repos-container">
-            <ul class="repos-list">
-                <h2>Repositories list</h2>
-            </ul>
+            <header>
+                <h2>Search GitHub Repos Here!</h2>
+            </header>
+
+            <div class="search-container">
+                <label for="repos-search-field"></label>
+                <input type="text" id="repos-search-field" autocomplete="off">
+                <button class="button search">Search</button>
+            </div>
+
+            <article>
+                <ul class="repos-list">
+                </ul>
+            </article>
+            
         </section>
     </section>
     
