--- a/Topic-1/index.html
+++ b/Topic-1/index.html
@@ -38,7 +38,7 @@
             </article>
 
         </section>
-        <section class="git-repos-container">
+        <aside class="git-repos-container">
             <header>
                 <h2>Search GitHub Repos Here!</h2>
             </header>
@@ -54,8 +54,11 @@
                 <ul class="repos-list">
                 </ul>
             </article>
+        </aside>
 
-        </section>
+        <article class="table generic-data">
+        </article>
+
     </section>
     
     <script src="./js/script.js" async></script>
