Module_4 - 2.* - Added drag and drop support

--- a/Topic-4/index.html
+++ b/Topic-4/index.html
@@ -15,7 +15,7 @@
             </header>
             <main>
                 <div class="txt-area-container">
-                    <label for="txt-area" id="txt-label">Type something!</label>
+                    <label for="txt-area" id="txt-label">Type something or drag a text file!</label>
                     <textarea name="txt-area" id="txt-area" cols="30" rows="10"></textarea>
                     <ul class="buttons-list">
                         <li><button class="button save" type="button">Save</button></li>
