Module_4 - 3.* - Added WebSocket Connection test

--- a/Topic-4/index.html
+++ b/Topic-4/index.html
@@ -25,6 +25,9 @@
                 <p><span class="save-advise">Data saved!</span></p>
                 <p><span class="delete-advise">Data erased!</span></p>
             </main>
+
+            <article class="webSocket-info-container">
+            </article>
     </section>
     <script src="./js/script.js"></script>
 </body>
